--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@sneppy/stallone",
-  "version": "1.0.0-beta.9",
+  "version": "1.0.0-beta.10",
   "private": false,
   "description": "An elegant and intuitive library to create REST clients",
   "main": "dist/stallone.umd.js",
@@ -37,17 +37,16 @@
   },
   "homepage": "https://github.com/sneppy/stallone#readme",
   "devDependencies": {
-    "@rollup/plugin-node-resolve": "^13.0.0",
+    "@rollup/plugin-node-resolve": "^13.1.2",
     "@rollup/plugin-replace": "^2.4.2",
-    "@rollup/plugin-typescript": "^8.2.1",
-    "@web/dev-server": "^0.1.17",
-    "@web/dev-server-rollup": "^0.3.4",
-    "rollup": "^2.48.0",
+    "@rollup/plugin-typescript": "^8.3.0",
+    "@web/dev-server": "^0.1.29",
+    "@web/dev-server-rollup": "^0.3.13",
+    "rollup": "^2.62.0",
     "rollup-plugin-terser": "^7.0.2",
-    "typescript": "^4.2.4",
-    "vue": "^3.0.11"
+    "typescript": "^4.5.4"
   },
   "dependencies": {
-    "async-mutex": "^0.3.1"
+    "async-mutex": "^0.3.2"
   }
 }
