--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "@sneppy/stallone",
-  "version": "1.0.0-beta.10",
+  "version": "1.0.0-beta.11",
+  "type": "module",
   "private": false,
   "description": "An elegant and intuitive library to create REST clients",
   "main": "dist/stallone.umd.js",
@@ -37,14 +38,14 @@
   },
   "homepage": "https://github.com/sneppy/stallone#readme",
   "devDependencies": {
+    "@rollup/plugin-alias": "^3.1.9",
     "@rollup/plugin-node-resolve": "^13.1.2",
     "@rollup/plugin-replace": "^2.4.2",
-    "@rollup/plugin-typescript": "^8.3.0",
     "@web/dev-server": "^0.1.29",
     "@web/dev-server-rollup": "^0.3.13",
     "rollup": "^2.62.0",
-    "rollup-plugin-terser": "^7.0.2",
-    "typescript": "^4.5.4"
+    "typescript": "^4.5.4",
+    "vue": "^2.6.14"
   },
   "dependencies": {
     "async-mutex": "^0.3.2"
