--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@sneppy/stallone",
-  "version": "1.0.0-beta.13",
+  "version": "1.0.1",
   "type": "module",
   "private": false,
   "description": "An elegant and intuitive library to create REST clients",
@@ -32,7 +32,10 @@
     "stallion",
     "sneppy"
   ],
-  "author": "sneppy",
+  "author": {
+    "name": "sneppy",
+    "email": "andrea.mecchia@mail.polimi.it"
+  },
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/sneppy/stallone/issues"
