--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
   "scripts": {
     "dev": "npx wds",
     "build": "npx rollup -c",
-    "prepublishOnly": "npm run build"
+    "prepublishOnly": "npm run build",
+    "lint": "eslint example.js src --ext .js --fix"
   },
   "repository": {
     "type": "git",
@@ -45,8 +46,13 @@
     "@rollup/plugin-alias": "^3.1.9",
     "@rollup/plugin-node-resolve": "^13.1.2",
     "@rollup/plugin-replace": "^2.4.2",
+    "@typescript-eslint/eslint-plugin": "^6.8.0",
+    "@typescript-eslint/parser": "^6.8.0",
     "@web/dev-server": "^0.1.29",
     "@web/dev-server-rollup": "^0.3.13",
+    "eslint": "^8.51.0",
+    "eslint-config-prettier": "^9.0.0",
+    "eslint-plugin-prettier": "^5.0.1",
     "rollup": "^2.62.0",
     "typescript": "^4.5.4",
     "vue": "^3.2.26"
